Squashed 'framework/core/' changes from f59f5a533..290e75482
290e75482 Merge pull request #84 from congcoi123/develop
235953c2a Merge pull request #83 from congcoi123/feature/CR-47_JDK_21
a932d5c9e ci: supports Java 21
64d9bbb51 tests(CR-47): add more test cases
324906587 chore(CR-47): minor changes
88d75c6f2 chore(CR-47): minor changes
7950fdb1b fix(CR-47): inconsistency handles session requests connection events
2d72085d7 feat(CR-47): remove redundant configuration
fba8bc350 fix(CR-47): the auto clean orphan session task fails to remove inactivated sessions
27135bd26 refactor(CR-47): rename class Controller to Processor
c7865df63 feat(CR-47): stop supporting request queue mechanism from zero processor
c9cbf0347 refactor(CR-47): minor changes
ff30758c7 fix(CR-47): remove fixed thread pool completely
3baeb1aea feat(CR-47): use LongAdder to provide more precise network statistics data
b6065db2e fix(CR-47): remove unused import
88306b551 refactor(CR-47): minor changes
bcc757dcb docs(CR-47): update CHANGELOG
f88d27d33 feat(CR-47): remove redundant events and close sessions whenever exceptions occurred
b7cb8885d refactor(CR-47): rename methods
0cbbef359 feat(CR-47): introduce new configurations
59808dc72 fix(CR-47): ignore thread interrupted exceptions
cdd7603ba refactor(CR-47): rename scheduler tasks
4f079b840 fix(CR-47): remove unnecessary waiting time
d30070b45 feat(CR-47): use virtual executors
95ec184b9 feat(CR-47): bump new version
696464835 fix(CR-47): typo
9526ff1f6 feat(CR-47): name session thread
3df271385 feat(CR-47): add preview mode
b3dda6067 feat(CR-47): re-configure the recommended number of internal processors
82050e6f3 feat(CR-47): the session requests will no longer get in the processor queue
bd1dfe615 feat(CR-47): update TradeMark info
958eff38d feat(CR-47): session has its own inbound queue to emit incoming messages event
f2dc506a0 refactor: minor changes
ed8d93e19 feat: update the default log4j2 settings

git-subtree-dir: framework/core
git-subtree-